tests/NormalTests/paczka1/small_fuzzy/35208279.err
Error in line 6: fmRnyGtS9qz S924 40,1
Error in line 8: cUwEG S924 49,5
